src/test/ui/block-result/issue-3563.stderr
error[E0599]: no method named `b` found for type `&Self` in the current scope
  --> $DIR/issue-3563.rs:13:17
   |
13 |         || self.b()
   |                 ^

error[E0308]: mismatched types
  --> $DIR/issue-3563.rs:13:9
   |
12 |     fn a(&self) {
   |                 -
   |                 |
   |                 possibly return type missing here?
   |                 expected `()` because of this default return type
13 |         || self.b()
   |         ^^^^^^^^^^^ expected (), found closure
   |
   = note: expected type `()`
              found type `[closure@$DIR/issue-3563.rs:13:9: 13:20 self:_]`

error: aborting due to previous error(s)

